fix: resolve misalignment of admin pages

--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -174,7 +174,7 @@ h1 {
 /* Profile */
 
 .picture {
-  width: 300px;
+  width: 250px;
   height: 300px;
 }
 
