--- a/static/stylesheets/lecturer/profile.css
+++ b/static/stylesheets/lecturer/profile.css
@@ -1,7 +1,7 @@
 /* Profile */
 
 .picture {
-  width: 300px;
+  width: 250px;
   height: 300px;
 }
 
